# World-le

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  DataReader.cpp  DataReader.h  Worldle.cpp  Worldle.h  countryData.csv  first.cpp  first.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  Constructor.cpp  ConstructorTest.cpp  FileReaderTest.cpp  TestData.cpp  TestData.h  testCountries.txt
